--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,6 @@
 .main {
   background-image: linear-gradient(0deg, transparent 15px, #333 16px),
     linear-gradient(90deg, transparent 15px, #333 16px);
-  background-color: #ddd;
+  background-color: rgb(248, 248, 248);
   background-size: 16px 16px;
 }
